--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.869.0",
     "axios": "^0.21.1",
     "date-fns": "^2.18.0",
+    "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
