--- a/package.json
+++ b/package.json
@@ -1,51 +1,63 @@
 {
-  "name": "mvp-web",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "aws-sdk": "^2.869.0",
-    "axios": "^0.21.1",
-    "date-fns": "^2.18.0",
-    "moment": "^2.29.1",
-    "node-sass": "4.14.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "mvp-web",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@date-io/date-fns": "^1.3.13",
+		"@material-ui/core": "^4.11.0",
+		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.57",
+		"@material-ui/pickers": "^3.2.10",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"aws-sdk": "^2.869.0",
+		"axios": "^0.21.1",
+		"clsx": "^1.1.1",
+		"date-fns": "^2.18.0",
+		"moment": "^2.29.1",
+		"node-sass": "4.14.1",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-circular-progressbar": "^2.0.3",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.0",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"pretty": "prettier --write '**/*.js' '**/*.scss' '**/*.md' '**/*.json'",
+		"pretty:check": "prettier --check '**/*.js' '**/*.scss' '**/*.md' '**/*.json'"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.26.1",
+		"lint-staged": "^11.1.2",
+		"prettier": "^2.4.1"
+	}
 }
