--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
 		"react-scripts": "4.0.0",
 		"web-vitals": "^0.2.4",
 		"eslint": "^7.32.0",
-		"eslint-config-airbnb": "^18.2.1"
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.26.1",
+		"lint-staged": "^11.1.2",
+		"prettier": "^2.4.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -54,10 +59,5 @@
 		]
 	},
 	"devDependencies": {
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.26.1",
-		"lint-staged": "^11.1.2",
-		"prettier": "^2.4.1"
 	}
 }
