--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"clsx": "^1.1.1",
 		"date-fns": "^2.18.0",
 		"moment": "^2.29.1",
-		"node-sass": "4.14.1",
+		"node-sass": ">=7.0.0",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-circular-progressbar": "^2.0.3",
@@ -58,6 +58,5 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {
-	}
+	"devDependencies": {}
 }
